--- a/cloudformation/Primary_VPC.yml
+++ b/cloudformation/Primary_VPC.yml
@@ -1,4 +1,4 @@
-Description:  Udacity - Design for Availability, Resilience, and Reliability
+Description:  Primary VPC US-West-1 (N.Carlifonia)
 
 Parameters:
   VpcName:
